syntax = "proto3";

package manga;
option go_package = "mangahub/internal/grpc/pb";

message GetMangaRequest {
    string manga_id = 1;
}

message MangaResponse {
    string id = 1;
    string title = 2;
    string author = 3;
    repeated string genres = 4; // Use repeated for slices/arrays
    string status = 5;
    int32 total_chapters = 6;
    string description = 7;
    string cover_url = 8;
}

message SearchRequest {
    string title = 1;
    string author = 2;
    string genre = 3;
    string status = 4;
    string order_by = 5;
    int32 limit = 6;
    int32 offset = 7; 
}

message SearchResponse {
    repeated MangaResponse manga = 1; // A list of MangaResponse messages
}

service MangaService {
    rpc GetManga(GetMangaRequest) returns (MangaResponse);
    rpc SearchManga(SearchRequest) returns (SearchResponse);
}